# Veritas

./: CONTRIBUTING.md  README.md  tmp-ssm-dumpdht.json  tmp-ssm-seed-diag.json  tmp_dumpmeta.ps1  tmp_dumpmeta.sh  tmp_dumpmeta_relays.sh  tmp_immediate_senddummy_capture.sh  tmp_immediate_senddummy_fullrecv.sh  tmp_immediate_senddummy_raw.sh  tmp_monitor_infra_progress.sh  tmp_senddummy_direct.sh
.github/: FUNDING.yml
prototype/gbn-bridge-proto/: .gitignore  Cargo.toml  README.md  docker-compose.bridge-smoke.yml
prototype/gbn-bridge-proto/crates/gbn-bridge-cli/: Cargo.toml
prototype/gbn-bridge-proto/crates/gbn-bridge-cli/src/: main.rs
prototype/gbn-bridge-proto/crates/gbn-bridge-protocol/: Cargo.toml
prototype/gbn-bridge-proto/crates/gbn-bridge-protocol/src/: bootstrap.rs  catalog.rs  control.rs  descriptor.rs  error.rs  lease.rs  lib.rs  messages.rs  punch.rs  session.rs  signing.rs  trace.rs
prototype/gbn-bridge-proto/crates/gbn-bridge-protocol/tests/: protocol_roundtrip.rs
prototype/gbn-bridge-proto/crates/gbn-bridge-publisher/: Cargo.toml
prototype/gbn-bridge-proto/crates/gbn-bridge-publisher/src/: ack.rs  ack_service.rs  api.rs  assignment.rs  auth.rs  authority.rs  batching.rs  bootstrap.rs  config.rs  http.rs  ingest.rs  lib.rs  metrics.rs  punch.rs  receiver.rs  receiver_proxy.rs  server.rs  service.rs  storage.rs  trace.rs
prototype/gbn-bridge-proto/crates/gbn-bridge-publisher/tests/: api_flow.rs  authority_flow.rs  control_dispatch.rs  persistence_flow.rs
prototype/gbn-bridge-proto/crates/gbn-bridge-runtime/: Cargo.toml
prototype/gbn-bridge-proto/crates/gbn-bridge-runtime/src/: ack_tracker.rs  bootstrap.rs  bootstrap_bridge.rs  bridge.rs  chunk_sender.rs  control_client.rs  creator.rs  discovery.rs  forwarder.rs  forwarder_client.rs  framing.rs  hint_merge.rs  host_creator.rs  host_creator_client.rs  lib.rs  network_transport.rs  progress_reporter.rs  publisher_api_client.rs  publisher_client.rs  punch.rs  seed_catalog.rs  session.rs  trace.rs
prototype/gbn-bridge-proto/docs/: chain-id-design.md  discovery-design.md  mobile-test-matrix.md
prototype/gbn-bridge-proto/infra/: README-infra.md
prototype/gbn-bridge-proto/infra/scripts/: collect-bridge-metrics.sh  collect-conduit-traces.sh  mobile-validation-full.sh  mobile-validation.sh  run-conduit-e2e.sh  run-local-bridge-tests.sh
prototype/gbn-bridge-proto/src/: lib.rs
prototype/gbn-bridge-proto/test-vectors/: README.md
prototype/gbn-bridge-proto/tests/: e2e.rs  integration.rs
prototype/gbn-bridge-proto/tests/common/: mod.rs
prototype/gbn-bridge-proto/tests/e2e/: bootstrap.rs  data_path.rs  failover.rs  refresh.rs  trace.rs
prototype/gbn-bridge-proto/tests/integration/: test_batch_bootstrap.rs  test_bridge_registration.rs  test_bridge_reuse_timeout.rs  test_catalog_refresh.rs  test_chain_id.rs  test_creator_failover.rs  test_first_creator_bootstrap.rs  test_payload_confidentiality.rs  test_reachability_filtering.rs  test_udp_punch_ack.rs
prototype/gbn-proto/: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.publisher  Dockerfile.relay  LICENSE  NOTICE  README.md  docker-compose.scale-test.yml  entrypoint.sh  probe_creator_to_relay.sh  publisher.key  publisher.pub  run_smoke_probe.sh  tmp_debug_info.sh  validate-scale-test.sh
prototype/gbn-proto/.keys/: gbn-proto-phase1-scale-n100-seedrelay-20260416-085115.pem
prototype/gbn-proto/crates/gbn-protocol/: Cargo.toml
prototype/gbn-proto/crates/mcn-crypto/: Cargo.toml
prototype/gbn-proto/crates/mcn-router-sim/: Cargo.toml
prototype/gbn-proto/crates/mpub-receiver/: Cargo.toml
prototype/gbn-proto/crates/proto-cli/: Cargo.toml
prototype/gbn-proto/docs/: runtime_control_plan.md
prototype/gbn-proto/infra/cloudformation/: phase1-scale-stack.yaml  phase1-scale-stack.yaml.bak  phase1-scale.yaml  phase1-stack.yaml
prototype/gbn-proto/infra/lambda/: chaos-controller.py
prototype/gbn-proto/infra/scripts/: bootstrap-relay.sh  build-and-push.sh  deploy-relays.sh  deploy-scale-test.sh  deploy-smoke-n5.sh  diag-bootup.sh  monitor-bootup.sh  relay-control-interactive.sh  restart-static-nodes.sh  run-chaos-upload.sh  run-tests.sh  send-manual-publish-frame.sh  status-snapshot-safe.ps1  status-snapshot-safe.sh  teardown-scale-test-safe.ps1  teardown-scale-test-safe.sh  teardown-scale-test.sh
prototype/gbn-proto/results/: scale-gbn-proto-phase1-scale-n100-20260410-220553-metrics.json  scale-gbn-proto-phase1-scale-n100-20260413-212601-metrics.json  scale-gbn-proto-phase1-scale-n100-20260413-214640-metrics.json  scale-gbn-proto-phase1-scale-n100-20260413-222504-metrics.json  scale-gbn-proto-phase1-scale-n100-20260413-224133-metrics.json  scale-gbn-proto-phase1-scale-n100-20260414-082536-metrics.json  scale-gbn-proto-phase1-scale-n100-20260414-085220-metrics.json  scale-gbn-proto-phase1-scale-n100-20260414-093447-metrics.json  scale-gbn-proto-phase1-scale-n100-20260414-180648-metrics.json  scale-gbn-proto-phase1-scale-n100-20260414-222311-metrics.json  scale-gbn-proto-phase1-scale-n100-20260415-094726-metrics.json  scale-gbn-proto-phase1-scale-n100-20260415-103432-metrics.json  scale-gbn-proto-phase1-scale-n100-20260415-105322-metrics.json  scale-gbn-proto-phase1-scale-n100-20260415-110445-metrics.json  scale-gbn-proto-phase1-scale-n100-20260415-111622-metrics.json  scale-gbn-proto-phase1-scale-n100-20260415-114600-metrics.json  scale-gbn-proto-phase1-scale-n100-20260415-122356-metrics.json  scale-gbn-proto-phase1-scale-n100-20260415-124643-metrics.json  scale-gbn-proto-phase1-scale-n100-20260415-220924-metrics.json  scale-gbn-proto-phase1-scale-n100-20260416-162925-metrics.json  scale-gbn-proto-phase1-scale-n100-20260416-175011-metrics.json  scale-gbn-proto-phase1-scale-n100-20260416-215339-metrics.json  scale-gbn-proto-phase1-scale-n100-20260416-223525-metrics.json  scale-gbn-proto-phase1-scale-n100-20260416-230720-metrics.json
prototype/gbn-proto/target-codex/: .rustc_info.json
prototype/gbn-proto/tests/integration/: test_active_heartbeat_disconnect.rs  test_dht_validation.rs  test_telescopic_sinkhole_resilience.rs
(+117 files in other folders)
