[workspace]
resolver = "2"
members = [
    "crates/gbn-bridge-protocol",
    "crates/gbn-bridge-runtime",
    "crates/gbn-bridge-publisher",
    "crates/gbn-bridge-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fahdabidi/Veritas"

[workspace.dependencies]
ed25519-dalek = { version = "2", features = ["rand_core", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
