[package]
name = "gbn-bridge-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[workspace]
resolver = "2"
members = [
    "crates/gbn-bridge-protocol",
    "crates/gbn-bridge-runtime",
    "crates/gbn-bridge-publisher",
    "crates/gbn-bridge-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fahdabidi/Veritas"

[workspace.dependencies]
ed25519-dalek = { version = "2", features = ["rand_core", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
ed25519-dalek.workspace = true
gbn-bridge-protocol = { path = "crates/gbn-bridge-protocol" }
gbn-bridge-publisher = { path = "crates/gbn-bridge-publisher" }
gbn-bridge-runtime = { path = "crates/gbn-bridge-runtime" }
