[workspace]
resolver = "2"
members = [
    "crates/gbn-protocol",
    "crates/mcn-sanitizer",
    "crates/mcn-chunker",
    "crates/mcn-crypto",
    "crates/mcn-router-sim",
    "crates/mpub-receiver",
    "crates/proto-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gbn-project/gbn-proto"

[workspace.dependencies]
# Cryptography
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
snow = "0.9"

# Peer-to-Peer
libp2p = { version = "0.52", features = ["tokio", "kad", "tcp", "noise", "yamux", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tempfile = "3"
