[package]
name = "gbn-bridge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
gbn-bridge-publisher = { path = "../gbn-bridge-publisher" }
gbn-bridge-runtime = { path = "../gbn-bridge-runtime" }
