[package]
name = "gbn-bridge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
gbn-bridge-protocol = { path = "../gbn-bridge-protocol" }
gbn-bridge-publisher = { path = "../gbn-bridge-publisher" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tungstenite = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
