[package]
name = "mcn-crypto"
description = "GBN Media Creation Network: X25519 ECDH key exchange and AES-256-GCM per-chunk encryption"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gbn-protocol = { path = "../gbn-protocol" }
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
snow = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
