[package]
name = "mcn-router-sim"
description = "GBN Media Creation Network: simulated multipath relay network for prototype testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gbn-protocol = { path = "../gbn-protocol" }
mcn-crypto = { path = "../mcn-crypto" }
tokio = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libp2p = { workspace = true }
snow = { workspace = true }
ed25519-dalek = { workspace = true }
aws-config = { workspace = true }
aws-sdk-servicediscovery = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
